# product-service/internal/infrastructure/repository/postgresql/basket.go
@@ -2,79 +2,78 @@ package postgresql
 
 import (
 	"context"
-	"database/sql"
 	"product-service/internal/entity"
 
 	"github.com/Masterminds/squirrel"
+	"github.com/k0kubun/pp"
 	"github.com/lib/pq"
 )
 
 func (u *productRepo) SaveToBasket(ctx context.Context, req *entity.BasketCreateReq) (*entity.Basket, error) {
 	var existingProductIDs []string
 	err := u.db.QueryRow(ctx, `SELECT product_id FROM `+u.basketTable+` WHERE user_id = $1`, req.UserID).Scan(pq.Array(&existingProductIDs))
-	if err != nil && err != sql.ErrNoRows {
-		return nil, err
+	if err != nil {
+		if err.Error() == "no rows in result set" {
+			productIDs := []string{req.ProductID}
+			data := map[string]interface{}{
+				"user_id":    req.UserID,
+				"product_id": pq.Array(productIDs),
+			}
 
-	}
+			query, args, err := u.db.Sq.Builder.Insert(u.basketTable).SetMap(data).ToSql()
+			if err != nil {
+				return nil, err
+			}
 
-	if err == sql.ErrNoRows {
-		productIDs := []string{req.ProductID}
-		data := map[string]any{
-			"user_id":    req.UserID,
-			"product_id": pq.Array(productIDs),
-		}
-
-		query, args, err := u.db.Sq.Builder.Insert(u.basketTable).SetMap(data).ToSql()
-		if err != nil {
+			_, err = u.db.Exec(ctx, query, args...)
+			if err != nil {
+				return nil, err
+			}
+		} else {
 			return nil, err
 		}
-
-		_, err = u.db.Exec(ctx, query, args...)
-		if err != nil {
-			return nil, err
+	} else {
+		// Mahsulot mavjudligini tekshirish
+		exists := false
+		for _, existingProductID := range existingProductIDs {
+			if existingProductID == req.ProductID {
+				exists = true
+				break
+			}
 		}
-	} else {		
-		var exists bool
-			for _, existingProductID := range existingProductIDs {
-				if existingProductID == req.ProductID {
-					exists = true
-					break
+
+		if exists {
+			// Mahsulotni olib tashlash
+			updatedProductIDs := make([]string, 0, len(existingProductIDs))
+			for _, pid := range existingProductIDs {
+				if pid != req.ProductID {
+					updatedProductIDs = append(updatedProductIDs, pid)
 				}
 			}
 
-			if exists {
-				updatedProductIDs := make([]string, 0, len(existingProductIDs))
-				for _, pid := range existingProductIDs {
-					if pid != req.ProductID {
-						updatedProductIDs = append(updatedProductIDs, pid)
-					}
-				}
+			data := map[string]interface{}{
+				"product_id": pq.Array(updatedProductIDs),
+			}
 
-				data := map[string]any{
-					"product_id": pq.Array(updatedProductIDs),
-				}
+			query, args, err := u.db.Sq.Builder.
+				Update(u.basketTable).
+				SetMap(data).
+				Where("user_id = ?", req.UserID).
+				ToSql()
+			if err != nil {
+				return nil, err
+			}
 
-				query, args, err := u.db.Sq.Builder.
-					Update(u.basketTable).
-					SetMap(data).
-					Where("user_id = ?", req.UserID).
-					ToSql()
-				if err != nil {
-					return nil, err
-				}
-
-				_, err = u.db.Exec(ctx, query, args...)
-				if err != nil {
-					return nil, err
-				}
-
-			} else {
-				
-				_, err = u.db.Exec(ctx, `UPDATE `+u.basketTable+` SET product_id = array_append(product_id, $2::uuid) WHERE user_id = $1`, req.UserID, req.ProductID)
-				if err != nil {
-					return nil, err
-				}
-			
+			_, err = u.db.Exec(ctx, query, args...)
+			if err != nil {
+				return nil, err
+			}
+		} else {
+			// Mahsulotni qo'shish
+			_, err = u.db.Exec(ctx, `UPDATE `+u.basketTable+` SET product_id = array_append(product_id, $2::uuid) WHERE user_id = $1`, req.UserID, req.ProductID)
+			if err != nil {
+				return nil, err
+			}
 		}
 	}
 
@@ -82,11 +81,10 @@ func (u *productRepo) SaveToBasket(ctx context.Context, req *entity.BasketCreate
 		UserID: req.UserID,
 	}, nil
 }
-
-func (u *productRepo) GetBasket(ctx context.Context, req *entity.GetBAsketReq) (*entity.Basket, error) {
+func (u *productRepo) GetBasket(ctx context.Context, req *entity.GetBasketReq) (*entity.Basket, error) {
 	product := &entity.Basket{}
 
-	offset := (req.Page - 1 ) * req.Limit
+	offset := (req.Page - 1) * req.Limit
 	queryBuilder := u.basketsSelectQueryPrefix()
 	queryBuilder = queryBuilder.Where(squirrel.Eq{"user_id": req.UserId})
 	queryBuilder = queryBuilder.Limit(uint64(req.Limit))
@@ -97,11 +95,13 @@ func (u *productRepo) GetBasket(ctx context.Context, req *entity.GetBAsketReq) (
 		return nil, err
 	}
 
+	pp.Println(query)
 	err = u.db.QueryRow(ctx, query, args...).Scan(
 		&product.ProductIDs,
 		&product.UserID,
 	)
 	if err != nil {
+		pp.Println(err.Error())
 		return nil, err
 	}
 	var existingProductIDs []string
@@ -112,6 +112,7 @@ func (u *productRepo) GetBasket(ctx context.Context, req *entity.GetBAsketReq) (
 	product.TotalCount = int64(len(existingProductIDs))
 	return product, nil
 }
+
 
 func (u *productRepo) DeleteFromBasket(ctx context.Context, userID string, productID string) error {
 	var existingProductIDs []string
